<resources>
    <string name="app_name">Made In Oman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About</string>
    <string name="contact_us">Contact Us</string>


    <string name="back">Back</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>

    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>


    <string name="call">Call</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>


    <string name="send">Send</string>
    <string name="ok">ok</string>
    <string name="directory">Directory</string>
    <string name="indus_Area">Industrial Areas</string>
    <string name="spons">Sponsors</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="create_new_listing">Create New Listing</string>
    <string name="profile">Profile</string>
    <string name="catalogue">Catalogue</string>
    <string name="services">Services</string>
    <string name="packages">Packages</string>
    <string name="peie">PEIE</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="app_settings">App Settings</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="keyword">Keyword</string>
    <string name="search2">Search</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="wait">Wait...</string>
    <string name="about_oman_made">About Oman Made</string>
    <string name="listings">Featured <font color='#33bcc2'> Listings</font></string>
    <string name="feat_cat">Featured <font color='#33bcc2'> Categories</font></string>

    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="not_av">Not available now</string>
    <string name="industrial_area">Industrial <font color='#33bcc2'>Area</font></string>
    <string name="listing_match_your_search">Listing match your search</string>
    <string name="no_image">No image</string>
    <string name="clear">Clear</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="business_details">Business Details</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="website">Website</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="slogan">Slogan</string>
    <string name="location_on_map">Location on map</string>
    <string name="about_us">About Us</string>
    <string name="more2">More Details</string>

</resources>
