<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="backListener"
            type="com.technology.circles.apps.omanmade.interfaces.Listeners.BackListener"
            />
        <variable
            name="lang"
            type="String" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:onClick="@{()->backListener.back()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_left_arrow"
                        android:tint="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/colorPrimary"
                        android:clickable="false"
                        android:longClickable="false"
                        android:textSize="16sp"
                        android:text="@string/back"
                        />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintBottom_toBottomOf="parent"
    android:orientation="vertical"
   android:background="@drawable/bg"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCatalogue"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"

        >

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/catalogue"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >
            <LinearLayout
                android:id="@+id/ll_no_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:tint="@color/colorPrimary"

                    />
                <TextView
                    android:id="@+id/tvNoEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/no_data_to_show"
                    />

            </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   android:padding="25dp"
                    >

                </androidx.recyclerview.widget.RecyclerView>


            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                />


        </FrameLayout>
</LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
