<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="count"
            type="Integer" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@drawable/bg"


        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            >
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleEnabled="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <FrameLayout
                        android:id="@+id/flSliderContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            >
                            <fragment
                                android:id="@+id/map"
                                android:layout_width="match_parent"
                                android:layout_height="180dp"
                                android:name="com.google.android.gms.maps.SupportMapFragment"
                                android:layout_marginTop="10dp"
                                />

                        </LinearLayout>

                    </FrameLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:contentPadding="5dp"
                        app:cardElevation="3dp"
                        app:cardCornerRadius="8dp"
                        app:cardBackgroundColor="@color/white"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="20dp"

                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:weightSum="2"
                                android:orientation="horizontal"
                                >


                                <FrameLayout
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/spinner_bg"
                                    >
                                    <Spinner
                                        android:id="@+id/spinnerLocation"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:spinnerMode="dialog"

                                        />
                                </FrameLayout>

                                <View
                                    android:layout_width="2dp"
                                    android:layout_height="2dp"/>

                                <FrameLayout
                                    android:layout_width="0dp"
                                    android:layout_height="35dp"
                                    android:layout_weight="1"
                                    android:background="@drawable/spinner_bg"
                                    >
                                    <Spinner
                                        android:id="@+id/spinnerCategoryListing"

                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:spinnerMode="dialog"

                                        />
                                </FrameLayout>




                            </LinearLayout>


                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:layout_marginTop="5dp"
                                >

                                <EditText
                                    android:id="@+id/edtKeyword"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/keyword"
                                    android:textColorHint="@color/gray5"
                                    android:paddingLeft="2dp"
                                    android:paddingRight="2dp"
                                    android:gravity="center"
                                    android:textSize="14sp"
                                    android:textColor="@color/black"
                                    android:singleLine="true"
                                    android:scrollHorizontally="true"
                                    android:background="@drawable/spinner_bg"


                                    />

                            </FrameLayout>
                            <Button
                                android:id="@+id/btnSearch"
                                android:layout_width="match_parent"
                                android:layout_height="35dp"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:text="@string/search2"
                                android:background="@drawable/btn_search"
                                android:layout_marginTop="5dp"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-15dp"
                        android:background="@color/white"
                        android:paddingTop="20dp"
                        android:paddingBottom="10dp"


                        >

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recViewDirectory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <ProgressBar
                            android:id="@+id/progBarDirectory"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:id="@+id/tvNoData1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:text="@string/no_data_to_show"
                            android:textColor="@color/black"
                            android:visibility="gone"
                            />
                    </FrameLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >



                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            >
                            <TextView
                                android:id="@+id/tvCounter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"
                                android:text='@{String.valueOf(count)}'
                                android:layout_gravity="center_horizontal"
                                android:textStyle="bold"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"

                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:text="@string/listing_match_your_search"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@id/tvCounter"

                                />

                            <TextView
                                android:id="@+id/tvClear"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:text="@string/clear"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:gravity="center"
                                android:visibility="gone"

                                />




                        </androidx.constraintlayout.widget.ConstraintLayout>









                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"


            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewSearch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
            <ProgressBar
                android:id="@+id/progBarSearch"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tvNoData2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:visibility="gone"
                />
        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
